# Mastering-Embedded-Linux-Programming-Third-Edition

./: README.md  copy-yoctoproject-image-to-sdcard.sh  format-sdcard.sh  list-libs
Chapter02/: Makefile  set-path-arm-cortex_a8-linux-gnueabihf  set-path-arm-unknown-linux-gnueabi
Chapter04/: build-linux-bbb.sh  build-linux-rpi4-64.sh  build-linux-versatilepb.sh  nova.dts
Chapter05/: run-qemu-initramfs.sh  run-qemu-nfsroot.sh  uEnv.txt
Chapter06/: run-qemu-buildroot.sh
Chapter06/helloworld/: Makefile  helloworld.c
Chapter06/meta-nova/: README
Chapter07/meta-gattd/: README
Chapter07/meta-mackerel/: README
Chapter07/meta-mine/: README
Chapter11/gpio-int/: Makefile  config-gpio.sh  gpio-int.c
Chapter11/i2c-example/: Makefile  i2c-eeprom-read.c
Chapter11/meta-ota/: README
Chapter11/read-urandom/: read-urandom.c
Chapter11/show-mac-addresses/: Makefile
Chapter12/dummy-driver/: Makefile  dummy.c
Chapter12/gpio-int/: gpio-int.c
Chapter12/read-urandom/: Makefile
Chapter12/show-mac-addresses/: show-mac-address.c
Chapter12/spidev-read/: parse_nmea.py  spidev_read.c
Chapter12/spidev-test/: spidev_test.c
Chapter13/: config-spi0.sh
Chapter13/simpleserver-systemd/: simpleserver.service
Chapter14/simpleserver/: Makefile  simpleserver.c
Chapter15/do-work/: do-work.c
Chapter16/: cpufrequtils  sysvinit-ondemand.sh
Chapter16/do-work/: Makefile
Chapter17/condvar-demo/: Makefile  condvar-demo.c
Chapter19/: tp.py
Chapter19/hellogdb/: CMakeLists.txt  cross.cmake
Chapter19/hellogdb/src/: main.c
Chapter20/: rpi4_64_bpf_linux_kernel_config
(+69 files in other folders)
